--- a/.editorconfig
+++ b/.editorconfig
@@ -12,14 +12,14 @@ indent_size = 4 # Default indentation size
 insert_final_newline = true # Make sure files end with a newline
 trim_trailing_whitespace = true # Remove trailing whitespace
 
-# C files
-[*.{c,h}]
+# Racket files
+[*.rkt]
 max_line_length = 100
 
 # Markdown files
 [*.md]
 max_line_length = 120
-trim_trailing_whitespace = false # Don't remove trailing whitespace in Markdown files
+trim_trailing_whitespace = false
 
 # Bash scripts
 [*.sh]
